[gd_scene load_steps=15 format=3 uid="uid://dyiij24g2kvrv"]

[ext_resource type="Script" uid="uid://bjyupdg5nh8qj" path="res://Scenes/Main Menu/SCN_main_menu.gd" id="1_k1ilt"]
[ext_resource type="Texture2D" uid="uid://lg4cykyd1ups" path="res://Assets/Backgrounds/Locations/MainMenu.png" id="2_wl8ex"]
[ext_resource type="PackedScene" uid="uid://bt33drb03ogrm" path="res://Button_Control.tscn" id="3_jtag5"]
[ext_resource type="Script" uid="uid://bci8unplm321r" path="res://Scenes/Main Menu/button_control.gd" id="7_ni3in"]
[ext_resource type="Texture2D" uid="uid://cgxps2jq0eje0" path="res://Assets/UI/Buttons/Button_Frame.png" id="8_wqrue"]
[ext_resource type="Texture2D" uid="uid://blic5vu2kbqmj" path="res://Assets/UI/Labels/Actions/Button_Label_Play.png" id="9_ri1ms"]
[ext_resource type="Texture2D" uid="uid://daes6heih0jxk" path="res://Assets/UI/Labels/Actions/Button_Label_Quit.png" id="10_hfm7t"]
[ext_resource type="Theme" uid="uid://6jfd7is3o5k3" path="res://textbox_theme.tres" id="11_2v1u8"]
[ext_resource type="Texture2D" uid="uid://d4fxqhkvbbxf8" path="res://Assets/UI/Labels/Actions/Button_Label_Endings.png" id="11_boqla"]
[ext_resource type="Texture2D" uid="uid://cpohl5h80ehvp" path="res://Assets/UI/Textures/Tablet.png" id="11_djsjg"]
[ext_resource type="Texture2D" uid="uid://bmx4mw0gfaa6w" path="res://Assets/UI/Logo/WCK_logo_updated.png" id="12_2v1u8"]
[ext_resource type="Theme" uid="uid://brd5vyvr1h0aj" path="res://Title_theme.tres" id="12_3a2ve"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mg0rw"]
bg_color = Color(0.301961, 0.141176, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcn87"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="ScnMainMenu" type="CanvasLayer"]
script = ExtResource("1_k1ilt")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="MainMenuBG" type="Sprite2D" parent="MarginContainer"]
position = Vector2(960, 540)
scale = Vector2(0.999845, 1.00028)
texture = ExtResource("2_wl8ex")

[node name="Buttons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 135
alignment = 1

[node name="Play_Control" type="Control" parent="MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Play_Button" parent="MarginContainer/Buttons/Play_Control" instance=ExtResource("3_jtag5")]
layout_mode = 1
offset_top = -62.0
offset_bottom = 62.0
scale = Vector2(1, 1)
text_texture = ExtResource("9_ri1ms")

[node name="Endings_Control" type="Control" parent="MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Endings_Button" parent="MarginContainer/Buttons/Endings_Control" instance=ExtResource("3_jtag5")]
layout_mode = 1
offset_top = -62.0
offset_bottom = 62.0
scale = Vector2(1, 1)
text_texture = ExtResource("11_boqla")

[node name="Credits_Control" type="Control" parent="MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Credits_Button" parent="MarginContainer/Buttons/Credits_Control" instance=ExtResource("3_jtag5")]
layout_mode = 1
offset_top = -62.0
offset_bottom = 62.0
scale = Vector2(1, 1)

[node name="Quit_Control" type="Control" parent="MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Quit_Button" parent="MarginContainer/Buttons/Quit_Control" instance=ExtResource("3_jtag5")]
layout_mode = 1
offset_top = -62.0
offset_bottom = 62.0
scale = Vector2(1, 1)
text_texture = ExtResource("10_hfm7t")

[node name="filler lol" type="Control" parent="MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("7_ni3in")

[node name="Quit_Button" type="Button" parent="MarginContainer/Buttons/filler lol"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.003
offset_top = -61.91
offset_right = 248.003
offset_bottom = 61.91
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Buttons/filler lol/Quit_Button"]
layout_mode = 0
offset_right = 496.0
offset_bottom = 124.0
mouse_filter = 2
texture = ExtResource("8_wqrue")

[node name="Endings" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Book" type="MarginContainer" parent="."]
visible = false
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="Panel" type="Panel" parent="Book"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_mg0rw")

[node name="TextureRect" type="TextureRect" parent="Book/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -62.0
offset_right = 248.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_djsjg")

[node name="MarginContainer" type="MarginContainer" parent="Book/Panel/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.992652, 1)
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="Panel" type="Panel" parent="Book/Panel/TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tcn87")

[node name="VSplitContainer" type="VSplitContainer" parent="Book/Panel/TextureRect/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.7328
offset_top = 9.0
offset_right = 19.7328
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.959768, 0.959768)
size_flags_horizontal = 3
dragging_enabled = false
dragger_visibility = 1

[node name="VSplitContainer" type="VSplitContainer" parent="Book/Panel/TextureRect/MarginContainer/Panel/VSplitContainer"]
layout_mode = 2
dragging_enabled = false
dragger_visibility = 1

[node name="Title" type="Label" parent="Book/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("12_3a2ve")
theme_override_colors/font_color = Color(0.909718, 0.940239, 0.999999, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/paragraph_spacing = 2
text = "ENDINGS"

[node name="Information" type="Label" parent="Book/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("12_3a2ve")
theme_override_colors/font_color = Color(0.857563, 0.906188, 0.999999, 1)
theme_override_font_sizes/font_size = 50
text = "INFORMATION"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VSplitContainer2" type="HSplitContainer" parent="Book/Panel/TextureRect/MarginContainer/Panel/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_constants/separation = 40
dragging_enabled = false
dragger_visibility = 1

[node name="LeftPage" type="Button" parent="Book/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("12_3a2ve")
text = " ← "

[node name="RightPage" type="Button" parent="Book/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("12_3a2ve")
text = " → "

[node name="Close" type="Button" parent="Book/Panel/TextureRect/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.6503
offset_top = 9.0
offset_right = -29.6503
offset_bottom = 44.0
grow_horizontal = 0
scale = Vector2(1.88652, 1.88652)
text = "X"

[node name="Delete Save" type="Button" parent="Book/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 646.0
offset_top = 449.0
offset_right = 972.0
offset_bottom = 524.0
grow_horizontal = 0
scale = Vector2(0.867, 0.867)
theme = ExtResource("11_2v1u8")
theme_override_font_sizes/font_size = 92

[node name="Label" type="Label" parent="Book/Panel/Delete Save"]
layout_mode = 0
offset_right = 326.0
offset_bottom = 76.0
theme_override_font_sizes/font_size = 61
text = "Delete Save"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="MarginContainer" parent="."]
visible = false
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="Panel" type="Panel" parent="Credits"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_mg0rw")

[node name="TextureRect" type="TextureRect" parent="Credits/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -62.0
offset_right = 248.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_djsjg")

[node name="MarginContainer" type="MarginContainer" parent="Credits/Panel/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.992652, 1)
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="Panel" type="Panel" parent="Credits/Panel/TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tcn87")

[node name="VSplitContainer" type="VSplitContainer" parent="Credits/Panel/TextureRect/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.7328
offset_top = 9.0
offset_right = 19.7328
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.959768, 0.959768)
size_flags_horizontal = 3
dragging_enabled = false
dragger_visibility = 1

[node name="VSplitContainer" type="VSplitContainer" parent="Credits/Panel/TextureRect/MarginContainer/Panel/VSplitContainer"]
layout_mode = 2
dragging_enabled = false
dragger_visibility = 1

[node name="Title" type="Label" parent="Credits/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("12_3a2ve")
theme_override_colors/font_color = Color(0.909718, 0.940239, 0.999999, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/paragraph_spacing = 2
text = "CREDITS"

[node name="Information" type="Label" parent="Credits/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("12_3a2ve")
theme_override_colors/font_color = Color(0.857563, 0.906188, 0.999999, 1)
theme_override_font_sizes/font_size = 50
text = "INFORMATION"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VSplitContainer2" type="HSplitContainer" parent="Credits/Panel/TextureRect/MarginContainer/Panel/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_constants/separation = 40
dragging_enabled = false
dragger_visibility = 1

[node name="LeftPage" type="Button" parent="Credits/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("12_3a2ve")
text = " ← "

[node name="RightPage" type="Button" parent="Credits/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("12_3a2ve")
text = " → "

[node name="Close" type="Button" parent="Credits/Panel/TextureRect/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.6503
offset_top = 9.0
offset_right = -29.6503
offset_bottom = 44.0
grow_horizontal = 0
scale = Vector2(1.88652, 1.88652)
text = "X"

[node name="Title" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(947, 237)
scale = Vector2(0.738663, 0.738663)
texture = ExtResource("12_2v1u8")

[connection signal="pressed" from="MarginContainer/Buttons/Play_Control/Play_Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Endings_Control/Endings_Button" to="." method="_on_endings_button_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Credits_Control/Credits_Button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Quit_Control/Quit_Button" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Buttons/filler lol/Quit_Button" to="MarginContainer/Buttons/filler lol" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Buttons/filler lol/Quit_Button" to="MarginContainer/Buttons/filler lol" method="_on_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Buttons/filler lol/Quit_Button" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="MarginContainer/Buttons/filler lol/Quit_Button" to="MarginContainer/Buttons/filler lol" method="_on_quit_button_toggled"]
[connection signal="pressed" from="Book/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer2/LeftPage" to="." method="_on_left_page_pressed"]
[connection signal="pressed" from="Book/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer2/RightPage" to="." method="_on_right_page_pressed"]
[connection signal="pressed" from="Book/Panel/TextureRect/MarginContainer/Panel/Close" to="." method="_on_endings_button_pressed"]
[connection signal="pressed" from="Book/Panel/Delete Save" to="." method="_on_delete_save_pressed"]
[connection signal="pressed" from="Credits/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer2/LeftPage" to="." method="_on_left_credit_pressed"]
[connection signal="pressed" from="Credits/Panel/TextureRect/MarginContainer/Panel/VSplitContainer/VSplitContainer2/RightPage" to="." method="_on_right_credit_pressed"]
[connection signal="pressed" from="Credits/Panel/TextureRect/MarginContainer/Panel/Close" to="." method="_on_credits_button_pressed"]
